--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,19 +1,24 @@
 /* Suavizar rolagem ao clicar em links */
 html {
     scroll-behavior: smooth;
+    
 }
 
 /* Estilo geral */
 body {
-    background-color: #121212;
-    color: #E0E0E0;
-    font-family: 'Arial', sans-serif;
+    background-image: url('./fundo.jpg'); /* Caminho da imagem */
+    background-size: cover; /* Faz a imagem cobrir todo o fundo */
+    background-position: center; /* Centraliza a imagem */
+    background-repeat: no-repeat; /* Evita que a imagem se repita */
+    background-attachment: fixed; /* Faz a imagem de fundo permanecer fixa quando rolar a página */
     margin: 0;
     padding: 0;
+    font-family: Arial, sans-serif; /* Estilos gerais para o corpo */
 }
 
 header {
-    background-color: #1E1E1E;
+    background-color: rgba(0, 0, 0, 0.5);
+   
     padding: 15px;
     text-align: center;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
@@ -23,10 +28,11 @@ header {
     z-index: 1000; /* Garante que o cabeçalho fique por cima do conteúdo */
 }
 
-header h1 {
+#titulo {
     color: #BB86FC;
-    padding: 0;
+    padding-top: 68px;
     margin: 0;
+    text-align: center;
 }
 
 #home {
@@ -54,10 +60,37 @@ header h1 {
     margin: 0;
     display: flex;
     justify-content: left;
+    position: relative;
+}
+
+#atalho {
+    padding: 5px;
+    position: fixed;
+    top: 0;
+    right: 0;
+    margin: 10px;
+}
+
+#atalho img {
+    width: 30px;
+    height: 30px; 
+    margin-top: -5px;
+    margin-bottom: auto;
+}
+
+#contato img {
+    width: 100px;
+    height: auto; 
+    margin-top: -5px;
+    margin-bottom: auto;
+}
+
+#contato{
+    text-align: center;
 }
 
 #main-nav ul li {
-    margin-right: 15px;
+    margin-right: 30px;
 }
 
 #main-nav ul li a {
@@ -72,12 +105,13 @@ header h1 {
 
 /* Seções */
 section {
+    background-color: rgba(0, 0, 0, 0.0);
+    color: white;
     padding: 20px;
     margin: 20px auto;
-    background-color: #1E1E1E;
     border-radius: 10px;
     width: 80%;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
 
 section h2 {
@@ -107,9 +141,6 @@ section p {
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
     flex: 1; /* A imagem ocupará 50% do espaço */
 }
-
-
-
 
 .certificados img {
     width: auto;
@@ -153,9 +184,41 @@ section p {
 
 /* Rodapé */
 footer {
+    background-color: rgba(0, 0, 0, 0.5);
     text-align: center;
     padding: 10px;
-    background-color: #1E1E1E;
+    
     color: #E0E0E0;
     margin-top: 40px;
+}
+
+#sobre-mim {
+    text-align: center;
+    padding: 20px;
+}
+
+.conteudo-sobre-mim {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px; /* Espaço entre o iframe e a imagem */
+}
+
+#spotify-player {
+    flex: 1; /* Deixa o iframe proporcional à imagem */
+    max-width: 300px; /* Define o tamanho máximo do iframe */
+}
+
+#minhafoto {
+    flex: 1;
+    max-width: 263px; /* Ajuste o tamanho da imagem */
+    object-fit: cover;
+}
+
+#mapa{
+    text-align: center;
+}
+
+#portifolio{
+    text-align: center;
 }
