--- a/assets/css/img.css
+++ b/assets/css/img.css
@@ -16,7 +16,43 @@
 /* Imagem Certificado */
 .certificados img {
     width: auto;
+    height: 260px;
+    margin: 5px;
+    border-radius: 12px;
+    transition: transform 0.5s ease;
+}
+
+.certificado:hover {
+    transform: scale(1.05); /* Amplia a imagem levemente quando o mouse passa por cima */
+    cursor: pointer; /* Mostra um cursor de "mão" para indicar que é clicável */
+}
+
+/* template */
+.template {
+    width: auto;
     height: 300px;
     margin: 5px;
     border-radius: 12px;
+    max-width: 100%;
+    transition: transform 0.5s ease;
+}
+
+.template:hover {
+    transform: scale(1.05); /* Amplia a imagem levemente quando o mouse passa por cima */
+    cursor: pointer; /* Mostra um cursor de "mão" para indicar que é clicável */
+}
+
+.portfolio-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin: 20px;
+}
+
+.portfolio-item p {
+    margin-top: 10px;
+    font-size: 16px;
+    color: #E0E0E0;
+    max-width: 500px;
 }
