--- a/assets/css/section.css
+++ b/assets/css/section.css
@@ -35,3 +35,18 @@ section p {
     transition: transform 0.3s ease;
     cursor: pointer;
 }
+
+.portfolio-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin: 20px;
+}
+
+.portfolio-item p {
+    margin-top: 10px;
+    font-size: 16px;
+    color: #E0E0E0;
+    max-width: 500px;
+}
