--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,7 @@
-/* Estilo geral */
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
+
+-----------
 * {
     scroll-behavior: smooth;
     
